tree-sitter-org-inline/test/corpus/angle_links.txt
==================
Simple HTTP angle link
==================

<http://example.com>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
Simple HTTPS angle link
==================

<https://example.com>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
File protocol angle link
==================

<file:///home/user/document.pdf>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
Angle link with path
==================

<https://example.com/path/to/page>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
Angle link with query parameters
==================

<https://example.com?foo=bar&baz=qux>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
Angle link with fragment
==================

<https://example.com/page#section>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
Angle link with parentheses
==================

<https://en.wikipedia.org/wiki/Example_(disambiguation)>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
Angle link with text before
==================

Visit <https://example.com> for info

---

(inline
  (title_only
    (title
      (plain_text)
      (angle_link)
      (plain_text))))

==================
Angle link with text after
==================

<https://example.com> is useful

---

(inline
  (title_only
    (title
      (angle_link)
      (plain_text))))

==================
Multiple angle links
==================

<http://one.com> and <http://two.com>

---

(inline
  (title_only
    (title
      (angle_link)
      (plain_text)
      (angle_link))))

==================
Angle link with markup
==================

*bold* <https://example.com> /italic/

---

(inline
  (title_only
    (title
      (text_markup
        (bold))
      (plain_text)
      (angle_link)
      (plain_text)
      (text_markup
        (italic)))))

==================
Angle link with target
==================

<<anchor>> <https://example.com>

---

(inline
  (title_only
    (title
      (target)
      (plain_text)
      (angle_link))))

==================
FTP protocol angle link
==================

<ftp://ftp.example.com/file.txt>

---

(inline
  (title_only
    (title
      (angle_link))))

==================
mailto protocol angle link
==================

<mailto:user@example.com>

---

(inline
  (title_only
    (title
      (angle_link))))
