tree-sitter-org-inline/test/corpus/export_snippets.txt
==================
Simple HTML export snippet
==================

Use @@html:<b>bold</b>@@ for emphasis.

---

(inline
  (title_only
    (title
      (plain_text)
      (export_snippet)
      (plain_text))))

==================
Simple LaTeX export snippet
==================

Formula @@latex:\textbf{x}@@ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (export_snippet)
      (plain_text))))

==================
Empty value export snippet
==================

Marker @@text:@@ placed.

---

(inline
  (title_only
    (title
      (plain_text)
      (export_snippet)
      (plain_text))))

==================
Backend with hyphens
==================

Use @@my-backend:content@@ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (export_snippet)
      (plain_text))))

==================
Backend with numbers
==================

Process @@html5:text@@ output.

---

(inline
  (title_only
    (title
      (plain_text)
      (export_snippet)
      (plain_text))))

==================
Export snippet at start
==================

@@html:<i>Italic</i>@@ text here

---

(inline
  (title_only
    (title
      (export_snippet)
      (plain_text))))

==================
Export snippet at end
==================

Text here @@latex:\textit{end}@@

---

(inline
  (title_only
    (title
      (plain_text)
      (export_snippet))))

==================
Multiple export snippets
==================

Use @@html:<b>bold</b>@@ and @@latex:\textbf{bold}@@

---

(inline
  (title_only
    (title
      (plain_text)
      (export_snippet)
      (plain_text)
      (export_snippet))))

==================
Export snippet with markup
==================

*Bold* text with @@html:<i>snippet</i>@@

---

(inline
  (title_only
    (title
      (text_markup
        (bold))
      (plain_text)
      (export_snippet))))

==================
Export snippet with tags
==================

Content @@html:text@@ here :work:

---

(inline
  (title_with_tags
    (title
      (plain_text)
      (export_snippet)
      (plain_text))
    (tags)))

==================
Export snippet with statistics cookie
==================

Progress [50%] with @@html:export@@

---

(inline
  (title_only
    (title
      (plain_text)
      (statistics_cookie)
      (plain_text)
      (export_snippet))))
