tree-sitter-org-inline/test/corpus/latex_fragments.txt
================================================================================
LaTeX display math $$...$$
================================================================================
$$E = mc^2$$
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (latex_fragment))))

================================================================================
LaTeX display math with complex content
================================================================================
$$\sum_{i=1}^{n} x_i$$
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (latex_fragment))))

================================================================================
LaTeX inline math \(...\)
================================================================================
\(e^{i \pi}\)
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (latex_fragment))))

================================================================================
LaTeX display math \[...\]
================================================================================
\[\int_0^\infty e^{-x}\,dx\]
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (latex_fragment))))

================================================================================
LaTeX inline math in text
================================================================================
The formula \(x^2\) is simple
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (plain_text)
      (latex_fragment)
      (plain_text))))

================================================================================
LaTeX TeX inline single char $x$
================================================================================
$x$
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (latex_fragment))))

================================================================================
LaTeX TeX inline expression
================================================================================
$\alpha + \beta$
--------------------------------------------------------------------------------

(inline
  (title_only
    (title
      (latex_fragment))))
