tree-sitter-org-inline/test/corpus/macros.txt
==================
Simple macro in title
==================

{{{title}}} test

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name))
      (plain_text))))

==================
Macro with arguments in title
==================

{{{author(John Doe)}}} test

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name)
        (macro_args))
      (plain_text))))

==================
Macro with multiple arguments
==================

{{{date(2024, 01, 15)}}} here

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name)
        (macro_args))
      (plain_text))))

==================
Multiple macros in title
==================

{{{title}}} by {{{author}}}

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name))
      (plain_text)
      (macro
        (macro_name)))))

==================
Macro with underscores and hyphens
==================

{{{my_macro-name}}} text

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name))
      (plain_text))))

==================
Macro at start of title
==================

{{{version}}} information

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name))
      (plain_text))))

==================
Macro at end of title
==================

Document {{{title}}}

---

(inline
  (title_only
    title: (title
      (plain_text)
      (macro
        (macro_name)))))

==================
Macro mixed with markup
==================

*bold* {{{title}}} /italic/

---

(inline
  (title_only
    title: (title
      (bold
        (plain_text))
      (plain_text)
      (macro
        (macro_name))
      (plain_text)
      (italic
        (plain_text)))))

==================
Macro with entity
==================

{{{author}}} \alpha test

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name))
      (plain_text)
      (entity)
      (plain_text))))

==================
Macro with link
==================

{{{title}}} [[http://example.com][link]]

---

(inline
  (title_only
    title: (title
      (macro
        (macro_name))
      (plain_text)
      (regular_link
        description: (plain_text)))))

==================
Macro with tags
==================

{{{title}}} info :tag1:tag2:

---

(inline
  (title_with_tags
    title: (title
      (macro
        (macro_name))
      (plain_text))
    tags: (tags)))
